Possible fix for blank header background on mobile safari.

--- a/css/designsprint.css
+++ b/css/designsprint.css
@@ -31,6 +31,7 @@ header {
 }
 
 .header-text {
+    background: transparent;
     left: 50%;
     position: absolute;
     top: 50%;
